# seleniumbase-python

./: .gitignore  Dockerfile.jenkins  Jenkinsfile  README.md  conftest.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/pages/: index.html  index.md
.github/scripts/: flatten_report.sh
.github/workflows/: ci.yml
config/: env_config.py  nginx.conf  project_config.py
history/chrome/: duration-trend.json  history.json
history/firefox/: duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/base/: base_page.py  ui_base_case.py
pages/common/main_page/: locators.py  main_page.py
pages/features/ab_testing/: ab_testing_page.py  locators.py
pages/features/add_remove_elements/: add_remove_elements_page.py  locators.py
pages/features/basic_auth/: basic_auth_page.py  locators.py
pages/features/broken_images/: broken_images_page.py  locators.py
pages/features/challenging_dom/: challenging_dom_page.py  locators.py
pages/features/checkboxes/: checkboxes_page.py  locators.py
pages/features/context_menu/: context_menu_page.py  locators.py
pages/features/digest_auth/: digest_auth_page.py  locators.py
pages/features/drag_and_drop/: drag_and_drop_page.py  locators.py
pages/features/dropdown_list/: dropdown_list_page.py  locators.py
pages/features/dynamic_content/: dynamic_content_page.py  locators.py
pages/features/dynamic_controls/: dynamic_controls_page.py  locators.py
pages/features/dynamic_loading/: dynamic_loading_page.py  example_1_page.py  example_2_page.py  locators.py
pages/features/entry_ad/: entry_ad_page.py  locators.py
pages/features/exit_intent/: exit_intent_page.py  locators.py
pages/features/files_download/: files_download_page.py  locators.py
pages/features/files_upload/: file_uploaded_page.py  files_upload_page.py  locators.py
pages/features/floating_menu/: floating_menu_page.py  locators.py
pages/features/form_authentication/: form_authentication_page.py  locators.py  secure_area_page.py
pages/features/frames/: frames_page.py  iframe_page.py  locators.py  nested_frames_page.py
pages/features/geolocation/: geolocation_page.py  locators.py
pages/features/horizontal_slider/: horizontal_slider_page.py  locators.py
pages/features/hovers/: hovers_page.py  hovers_user_page.py  locators.py
pages/features/infinite_scroll/: infinite_scroll_page.py  locators.py
pages/features/inputs/: inputs_page.py  locators.py
pages/features/javascript_alerts/: javascript_alerts_page.py  locators.py
pages/features/javascript_onload_event_error/: javascript_onload_event_error_page.py  locators.py
pages/features/jquery_ui_menus/: jquery_ui_menus_page.py  locators.py
pages/features/key_presses/: key_presses_page.py  locators.py
reports/: index.html
reports/chrome/: index.html
reports/chrome/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
reports/chrome/export/: influxDbData.txt  prometheusData.txt
reports/chrome/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
reports/chrome/widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
reports/firefox/: index.html
reports/firefox/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
reports/firefox/export/: influxDbData.txt  prometheusData.txt
reports/firefox/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
reports/firefox/widgets/: duration-trend.json  duration.json  environment.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
src/config/: __init__.py  logging_config.py  nginx.conf  project_config.py
src/pages/base/: base_page.py  ui_base_case.py
src/pages/common/main_page/: locators.py  (+1 more)
tests/: test_ab_testing.py  test_add_remove_elements.py  test_basic_auth_login_scenarios.py  test_broken_images.py  test_challenging_dom.py  test_checkboxes.py  test_context_menu.py  test_digest_auth_login_scenarios.py  test_drag_and_drop.py  test_dropdown_list.py  test_dynamic_content.py  test_dynamic_controls.py  test_dynamic_loading.py  test_entry_ad.py  test_exit_intent.py  test_files_download.py  test_floating_menu.py  test_form_authentication.py  test_geolocation.py  test_horizontal_slider.py  test_hovers.py  test_infinite_scroll.py  test_inputs.py
tests/test_files_upload/: test_files_upload.py
tests/test_frames/: test_iframe.py  test_nested_frames.py
tests/ui_test_suite/: test_ab_testing.py  test_add_remove_elements.py  test_basic_auth_login_scenarios.py  test_broken_images.py  test_challenging_dom.py  test_checkboxes.py  test_context_menu.py  test_digest_auth_login_scenarios.py  test_drag_and_drop.py  test_dropdown_list.py  test_dynamic_content.py  test_dynamic_controls.py  test_dynamic_loading.py  test_entry_ad.py  test_exit_intent.py  test_files_download.py  test_floating_menu.py  test_form_authentication.py  test_geolocation.py  test_horizontal_slider.py  test_hovers.py  test_infinite_scroll.py  test_inputs.py  test_javascript_alerts.py  test_javascript_onload_event_error.py  test_jquery_ui_menu.py  test_key_presses.py
tests/ui_test_suite/test_files_upload/: test_files_upload.py
tests/ui_test_suite/test_frames/: test_iframe.py  test_nested_frames.py
(+1677 files in other folders)
