[project]
name = "selenium-python"
version = "0.1.0"
requires-python = ">=3.10"


[tool.pytest.ini_options]
addopts = [
    # Log output:
    # show summary of all test results
    "-v",
    "-ra",
    # use short traceback format
    "--tb=short",
    # capture description
    # "--capture=tee-sys",
    # durations description
    # "--durations=0",
    # suppress warnings
    "--disable-warnings",

    # Screenshot of test failure:
    "--screenshot",
  
    # Multi-threading:
    # "-nauto",
    # "--dist=loadfile",

    # Reporting:
    # "--dashboard",
    # "--html=report.html",
    # "--html=dashboard.html",
    # "--alluredir=reports/allure-results",

    # Markers:
    "-m regression or smoke",
    # "-m smoke",
    # "-m ui",
    # "-m api",
    # "-m current",
    # enforce marker validation
    "--strict-markers",

    # Chrome-Headless-Shell:
    # "--chs",

    # Undetected-Chromedriver Mode:
    # "--uc",
]

markers = [
    "regression: full regression test suite",
    "smoke: critical tests",
    "ui: user interface interactions - auto-navigate to base url",
    "fix: test need to be fixed",
    # "flaky: tests that may fail intermittently",
    # "slow: tests that take more than 10 seconds",
]

filterwarnings = [
    "ignore::urllib3.exceptions.NotOpenSSLWarning",
    "ignore:Connection pool is full:Warning",
    "ignore::UserWarning:pytest_html",
]

# Main tests folder path:
testpaths = ["tests"]

# Project naming patterns:
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Rerun configurations:
# reruns = 2
# reruns_delay = 1

# Log printing to CLI:
# log_cli = true
# log_cli_level = "INFO"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = ["E", "F", "I", "UP"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true


[tool.taskipy.tasks]
check = "ruff check ."
fix   = "ruff check . --fix && ruff format ."